[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/Walk/walk_1.tres" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Head/Head_0.tres" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Walk/walk_2.tres" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Walk/walk_0.tres" type="Texture" id=5]
[ext_resource path="res://TestEnv/FireCore.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Utils/EnemyDetector.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Player/FlamePistol/flame_pistol.tres" type="Texture" id=8]
[ext_resource path="res://Assets/PNG/HealthBar/barHorizontal_green.png" type="Texture" id=9]
[ext_resource path="res://Assets/player ded.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "move",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.3281, 81.8292 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.231, 84.3936 )

[sub_resource type="CircleShape2D" id=4]
radius = 1120.54

[sub_resource type="GDScript" id=5]
script/source = "extends Node2D

var green_texture = load(\"res://Assets/PNG/HealthBar/barHorizontal_green.png\")
var yellow_texture = load(\"res://Assets/PNG/HealthBar/barHorizontal_yellow.png\")
var red_texture = load(\"res://Assets/PNG/HealthBar/barHorizontal_red.png\")

var health_percentage : float

func update_health_bar(full_health : float, current_health : float) -> void:
	health_percentage = current_health / full_health
	
	if health_percentage <= 1.0 and health_percentage > 0.66:
		$TextureProgress.texture_progress = green_texture
	elif health_percentage <= 0.66 and health_percentage > 0.33:
		$TextureProgress.texture_progress = yellow_texture
	elif health_percentage > 0 and health_percentage <= 0.33:
		$TextureProgress.texture_progress = red_texture
		
	$TextureProgress.value = health_percentage * 100
"

[node name="Character" type="KinematicBody2D"]
z_index = 1
input_pickable = true
script = ExtResource( 1 )

[node name="Body" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "dead"
playing = true

[node name="Head" type="Sprite" parent="Body"]
position = Vector2( -1.33635, -36.9723 )
texture = ExtResource( 3 )

[node name="Hand" type="Sprite" parent="Body"]
position = Vector2( -7.87627, -14.0017 )
texture = ExtResource( 8 )
offset = Vector2( 17, 3 )

[node name="GunPoint" type="Node2D" parent="Body/Hand"]
position = Vector2( 42.876, 0 )

[node name="FireCore" parent="Body/Hand" instance=ExtResource( 6 )]
position = Vector2( 48.7216, 3.3371 )
scale = Vector2( 0.25, 0.25 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0.671936, -29.1708 )
shape = SubResource( 2 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="EnemyDetector" parent="." instance=ExtResource( 7 )]

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
visible = false

[node name="Collider" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -29 )
shape = SubResource( 3 )

[node name="AttackRadius" type="Area2D" parent="."]
visible = false

[node name="Collider" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource( 4 )

[node name="HealthDisplay" type="Node2D" parent="."]
position = Vector2( -100, -155 )
z_index = 1
script = SubResource( 5 )

[node name="TextureProgress" type="TextureProgress" parent="HealthDisplay"]
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="send_enemies" from="EnemyDetector" to="." method="_on_EnemyDetector_send_enemies"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="area_entered" from="AttackRadius" to="." method="_on_AttackRadius_area_entered"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
